= 1.0.9 = * Removed: style.css Custom Column Break for Blocks on small screen * Fix: ThemeJSON Gradient Color mix-up fixed * Fix: Escaping modErrorpage -> $text_html corrected

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author: ZuestMedia
 Author URI: https://zuestmedia.com/
 Text Domain: zmt-modular
 Domain Path: /languages
-Version: 1.0.8
+Version: 1.0.9
 Description: ZMT Modular is a lightweight, fast and fully customizable WordPress theme based on the ZM-Theme-Framework. This theme combines the new modern features of Gutenberg Block Editor respectively concepts from Full Site Editing (FSE) with the proven classic WordPress theme structure. For a quick start, import a preconfigured starter design directly from the Design-Explorer and get started right away. Use the Customizer to define global settings like colors, fonts, etc. and customize every part of your website. Thanks to the modular design, header and footer builders are a thing of the past. With the template editor (Pro) or by using a child theme you can easily create as many sections as you need in the header, center or footer area and arrange them as you need.
 Tags: accessibility-ready, blog, custom-logo, e-commerce, rtl-language-support, grid-layout, one-column, two-columns, custom-background, custom-colors, custom-header, custom-menu, featured-image-header, featured-images, flexible-header, full-width-template, sticky-post, theme-options, threaded-comments, translation-ready, wide-blocks, footer-widgets, portfolio, left-sidebar, right-sidebar
 Requires at least: 4.7
@@ -221,14 +221,6 @@ a img.aligncenter {
 /* -------------------------------------------------------------------------- */
 /*	3. wp-block optimizations
 /* -------------------------------------------------------------------------- */
-
-  /* forces earlier stacking of flex-grid */
-  @media (max-width: 781px) {
-    .wp-block-columns > .wp-block-column {
-        /*margin:0;*/
-        flex-basis: 100%!important;
-    }
-  }
 
   /* replaces inherit */
   pre.wp-block-verse{
